--- a/components/train_val_test_split/conda.yml
+++ b/components/train_val_test_split/conda.yml
@@ -3,11 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
-  - pip=24.3.1
-  - requests=2.24.0
-  - scikit-learn=1.3.2
+  - python=3.12
+  - pip
+  - requests
+  - scikit-learn
   - pip:
-      - mlflow==3.3.2
-      - wandb==0.21.3
+      - mlflow
+      - wandb
       - git+https://github.com/udacity/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
