--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,15 @@
-name: nyc_airbnb_dev
+name: airbnb_env
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
-  - hydra-core=1.3.2
-  - matplotlib=3.10.6
-  - pandas=2.3.2
-  - jupyterlab=4.4.7
-  - cookiecutter=2.6.0
-  - pip=24.3.1
+  - python=3.12
+  - hydra-core
+  - matplotlib
+  - pandas
+  - jupyterlab
+  - cookiecutter
+  - pip
   - pip:
-      - mlflow==3.3.2
-      - wandb==0.21.3
+      - mlflow
+      - wandb
