--- a/src/data_check/conda.yml
+++ b/src/data_check/conda.yml
@@ -3,11 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
-  - pandas=2.3.2
-  - pytest=6.2.2
-  - scipy=1.5.2
-  - pip=24.3.1
+  - python=3.12
+  - pandas
+  - pytest
+  - scipy
+  - pip
   - pip:
-      - mlflow==3.3.2
-      - wandb==0.21.3
+      - mlflow
+      - wandb
