--- a/src/train_random_forest/conda.yml
+++ b/src/train_random_forest/conda.yml
@@ -4,11 +4,11 @@ channels:
   - defaults
 dependencies:
   - python=3.12
-  - hydra-core=1.3.2
-  - matplotlib=3.10.6
-  - pandas=2.3.2
-  - pip=25.1.0
-  - scikit-learn=1.3.2
+  - hydra-core
+  - matplotlib
+  - pandas
+  - pip
+  - scikit-learn
   - pip:
-      - mlflow==3.3.2
-      - wandb==0.21.3
+      - mlflow
+      - wandb
