--- a/components/test_regression_model/conda.yml
+++ b/components/test_regression_model/conda.yml
@@ -4,11 +4,11 @@ channels:
   - defaults
 dependencies:
   - python=3.12
-  - pip=25.1.0
-  - requests=2.24.0
-  - scikit-learn=1.3.2
-  - pandas=2.3.2
+  - pip
+  - requests
+  - pandas
+  - scikit-learn=1.7.2
   - pip:
-      - mlflow==3.3.2
-      - wandb==0.21.3
-      - git+https://github.com/udacity/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
+      - mlflow
+      - wandb
+      - git+https://github.com/Fatimat01/short-term-rental-prices-ml-pipeline.git#egg=wandb-utils&subdirectory=components
