--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 main:
-  components_repository: "https://github.com/Fatimat01/short-term-rental-prices-ml-pipeline.git#components"
+  components_repository: "https://github.com/Fatimat01/short-term-rental-prices-ml-pipeline#components"
   # All the intermediate files will be copied to this directory at the end of the run.
   # Set this to null if you are running in prod
   project_name: nyc_airbnb
@@ -36,3 +36,7 @@ modeling:
     max_features: 0.5
     # DO not change the following
     oob_score: true
+
+# mlflow run . \
+#   -P steps=train_random_forest \
+#   -P hydra_options="modeling.max_tfidf_features=10,15,30 modeling.random_forest.max_features=0.1,0.33,0.5,0.75,1 -m"
